@@ -36,11 +36,6 @@
     </property>
     <item>
      <widget class="QPlainTextEdit" name="textView">
-      <property name="font">
-       <font>
-        <family>Monospace</family>
-       </font>
-      </property>
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarAsNeeded</enum>
       </property>
