@@ -32,6 +32,12 @@ DXCOptions::DXCOptions(QWidget *parent) :
     ui(new Ui::DXCOptions)
 {
     ui->setupUi(this);
+
+    /* select font for text viewer */
+    auto fixedFont = QFontDatabase::systemFont(QFontDatabase::FixedFont);
+    fixedFont.setPointSize(10);
+    ui->plainTextEdit_DXCMonitor->setFont(fixedFont);
+
     m_socket = new QTcpSocket(this);
     connect(m_socket, SIGNAL(connected()),this, SLOT(connected()));
     connect(m_socket, SIGNAL(disconnected()),this, SLOT(disconnected()));
